--- a/src/modules/users/views/forgot_password.hbs
+++ b/src/modules/users/views/forgot_password.hbs
@@ -16,6 +16,6 @@
 </p>
 
 <p>Se não foi você, então desconsidera esse email!</p>
-<p>Obrigado! <br /> <strong>Equipe GoBarber</strong></p>
+<p>Obrigado! <br /> <strong>Equipe Concurso</strong></p>
 
 </div>
